--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    box-sizing: border-box;
+    padding:0%;
+    margin: 0%;
+    font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar{
+    position: relative;
+    width: 100vw;
+    background: rgb(199, 197, 197);
+    display: flex;
+    flex-direction: row;
+}
+
+.main_name{
+    cursor:alias;
+    display: block;
+    position: relative;
+    margin: 1% 2%;
+    /* border: 2px solid; */
+    padding: 0px 3%;
+    font-weight: 600;
+    font-size: x-large;
+    line-height: 1.
+}
+
+.pages{
+    width: 50%;
+    /* border: 2px solid black; */
+    display: flex;
+    align-items: center;
+    padding: 0 1%;
+}
+.pages li{
+    list-style: none;
+    margin: 0 4%;
+}
+.pages li a{
+    text-decoration: none;
+    transition: color 0.5s;
+    color: #7c7c7c;
+    font-size: large;
+}
+
+.pages li a:hover{
+    color: black;
+}
+
+.search_sec{
+    display: block;
+    position: absolute;
+    right: 3%;
+    width:25%;
+    height: 100%;
+    border: 2px solid;
+}
+
+.search_sec input {
+    height: 7vh;
+    border: none;
+    border-radius: 6px;
+    margin: 3vh 5vh;
+    transition: border;
+}
+
+.search_sec input:focus{
+    border: 2px solid black;
 }
